refactor: get index method
