# src/routes/swagger.json
@@ -1625,6 +1625,265 @@
 				"type": "object",
 				"description": "Construct a type with a set of properties K of type T"
 			},
+			"LinkedDataProof": {
+				"description": "Linked Data Proof",
+				"properties": {
+					"type": {
+						"type": "string"
+					},
+					"proofPurpose": {
+						"type": "string"
+					},
+					"verificationMethod": {
+						"type": "string"
+					},
+					"created": {
+						"type": "string"
+					},
+					"domain": {
+						"type": "string"
+					},
+					"challenge": {
+						"type": "string"
+					},
+					"jws": {
+						"type": "string"
+					},
+					"proofValue": {
+						"type": "string"
+					},
+					"nonce": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"type",
+					"proofPurpose",
+					"verificationMethod",
+					"created"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"DataIntegrityProof": {
+				"description": "Linked Data Proof",
+				"properties": {
+					"type": {
+						"type": "string"
+					},
+					"cryptosuite": {
+						"type": "string"
+					},
+					"proofPurpose": {
+						"type": "string"
+					},
+					"verificationMethod": {
+						"type": "string"
+					},
+					"domain": {
+						"type": "string"
+					},
+					"challenge": {
+						"type": "string"
+					},
+					"nonce": {
+						"type": "string"
+					},
+					"created": {
+						"type": "string"
+					},
+					"expires": {
+						"type": "string"
+					},
+					"proofValue": {
+						"type": "string"
+					},
+					"previousProof": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"type",
+					"cryptosuite",
+					"proofPurpose",
+					"verificationMethod"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"SingleOrArray_LinkedDataProof-or-DataIntegrityProof_": {
+				"anyOf": [
+					{
+						"anyOf": [
+							{
+								"$ref": "#/components/schemas/LinkedDataProof"
+							},
+							{
+								"$ref": "#/components/schemas/DataIntegrityProof"
+							}
+						]
+					},
+					{
+						"items": {
+							"anyOf": [
+								{
+									"$ref": "#/components/schemas/LinkedDataProof"
+								},
+								{
+									"$ref": "#/components/schemas/DataIntegrityProof"
+								}
+							]
+						},
+						"type": "array"
+					}
+				]
+			},
+			"W3cIssuer": {
+				"properties": {
+					"id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"id"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"W3cCredentialSubject": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"claims": {
+						"$ref": "#/components/schemas/Record_string.unknown_"
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"SingleOrArray_W3cCredentialSubject_": {
+				"anyOf": [
+					{
+						"$ref": "#/components/schemas/W3cCredentialSubject"
+					},
+					{
+						"items": {
+							"$ref": "#/components/schemas/W3cCredentialSubject"
+						},
+						"type": "array"
+					}
+				]
+			},
+			"W3cCredentialSchema": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"type": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"id",
+					"type"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"SingleOrArray_W3cCredentialSchema_": {
+				"anyOf": [
+					{
+						"$ref": "#/components/schemas/W3cCredentialSchema"
+					},
+					{
+						"items": {
+							"$ref": "#/components/schemas/W3cCredentialSchema"
+						},
+						"type": "array"
+					}
+				]
+			},
+			"W3cCredentialStatus": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"type": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"id",
+					"type"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"W3cJsonLdVerifiableCredential": {
+				"properties": {
+					"context": {
+						"items": {
+							"anyOf": [
+								{
+									"type": "string"
+								},
+								{
+									"$ref": "#/components/schemas/JsonObject"
+								}
+							]
+						},
+						"type": "array"
+					},
+					"id": {
+						"type": "string"
+					},
+					"type": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"issuer": {
+						"anyOf": [
+							{
+								"type": "string"
+							},
+							{
+								"$ref": "#/components/schemas/W3cIssuer"
+							}
+						]
+					},
+					"issuanceDate": {
+						"type": "string"
+					},
+					"expirationDate": {
+						"type": "string"
+					},
+					"credentialSubject": {
+						"$ref": "#/components/schemas/SingleOrArray_W3cCredentialSubject_"
+					},
+					"credentialSchema": {
+						"$ref": "#/components/schemas/SingleOrArray_W3cCredentialSchema_"
+					},
+					"credentialStatus": {
+						"$ref": "#/components/schemas/W3cCredentialStatus"
+					},
+					"proof": {
+						"$ref": "#/components/schemas/SingleOrArray_LinkedDataProof-or-DataIntegrityProof_"
+					}
+				},
+				"required": [
+					"context",
+					"type",
+					"issuer",
+					"issuanceDate",
+					"credentialSubject",
+					"proof"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"DidRegistrationSecretOptions": {
 				"$ref": "#/components/schemas/Record_string.unknown_"
 			},
@@ -6344,7 +6603,9 @@
 						"description": "Ok",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"$ref": "#/components/schemas/W3cJsonLdVerifiableCredential"
+								}
 							}
 						}
 					}
@@ -6399,8 +6660,8 @@
 				}
 			}
 		},
-		"/multi-tenancy/get-empty-index/{BSLCUrl}": {
-			"post": {
+		"/multi-tenancy/get-empty-bslc-index/{bslcUrl}/{bslcId}": {
+			"get": {
 				"operationId": "GetEmptyIndexForBSLC",
 				"responses": {
 					"200": {
@@ -6420,6 +6681,7 @@
 						}
 					}
 				},
+				"description": "Get empty index for BSLC",
 				"tags": [
 					"MultiTenancy"
 				],
@@ -6430,14 +6692,83 @@
 				],
 				"parameters": [
 					{
+						"description": "URL of the BSLC",
 						"in": "path",
-						"name": "BSLCUrl",
+						"name": "bslcUrl",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"description": "ID of the BSLC",
+						"in": "path",
+						"name": "bslcId",
 						"required": true,
 						"schema": {
 							"type": "string"
 						}
 					}
 				]
+			}
+		},
+		"/multi-tenancy/revoke-w3c/{tenantId}": {
+			"post": {
+				"operationId": "RevokeW3CCredential",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"description": "Revoke a W3C credential by revocationId",
+				"tags": [
+					"MultiTenancy"
+				],
+				"security": [
+					{
+						"apiKey": []
+					}
+				],
+				"parameters": [
+					{
+						"description": "Id of the tenant",
+						"in": "path",
+						"name": "tenantId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"description": "Revocation request details",
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"credentialId": {
+										"type": "string"
+									},
+									"revocationId": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"credentialId",
+									"revocationId"
+								],
+								"type": "object",
+								"description": "Revocation request details"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/transactions/endorse": {
